# krang

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: plan-expand-tracking.md
scripts/: publish.sh
src/kraang/: __init__.py  cli.py  config.py  display.py  formatter.py  indexer.py  models.py  search.py  server.py  sqlite_store.py  store.py
src/krang/: __init__.py  models.py  search.py  server.py  sqlite_store.py  store.py
tests/: conftest.py  test_cli.py  test_e2e.py  test_formatter.py  test_indexer.py  test_models.py  test_search.py  test_server.py  test_sqlite_store.py  test_store.py
