[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "kraang"
dynamic = ["version"]
description = "A second brain for humans and their agents — MCP server backed by SQLite FTS5."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Johnny Greco" }]
keywords = ["mcp", "second-brain", "knowledge-management", "sqlite", "fts5"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "mcp>=1.2.0,<2",
    "pydantic>=2.0",
    "aiosqlite>=0.20.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.scripts]
kraang = "kraang.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "ty>=0.0.1a7",
    "coverage>=7.0",
    "pre-commit>=3.0",
]

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/kraang/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/kraang"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 99
extend-exclude = ["**/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ty.environment]
python-version = "3.10"
